--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
 <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/head.html"></include>
-
+    <!-- Trend movies list -->
+    <div class="container">
+      <ul class="collection"></ul>
+      <li class="card">123</li>
     <include src="./partials/footer.html"></include>
 </body>
 
