--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/head.html"></include>
     <!-- Trend movies list -->
-    <div class="container">
-      <ul class="collection"></ul>
-      <li class="card">123</li>
-    <include src="./partials/footer.html"></include>
-</body>
+    <include src="./partials/main.html"></include>
 
+    <include src="./partials/footer.html"></include>
+  </body>
 </html>
