--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
 <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/head.html"></include>
-
+    <include src="./partials/header_library.html"></include>
     <include src="./partials/footer.html"></include>
+    
 </body>
 
 </html>
