--- a/src/my-library.html
+++ b/src/my-library.html
@@ -15,6 +15,7 @@
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
+    <script src="./js/local-storage/watchedAndQueue.js" type="module"></script>
 </body>
 
 </html>
