--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-
-    <div class="loader is-hidden"></div>
+    <div class="spinner is-hidden">
+        <div class="loader"></>
+    </div>
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
