--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <div class="spinner is-hidden">
-        <div class="loader"></>
+        <div class="loader"></div>
     </div>
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
