--- a/src/my-library.html
+++ b/src/my-library.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./my-library.js"></script>
   </head>
 
   <body>
