--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
 
@@ -17,6 +16,6 @@
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
-</body>
-
+    <include src="./partials/auth.html"></include>
+  </body>
 </html>
