--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <div class="spinner is-hidden">
-        <div class="loader"></div>
-    </div>
+    <include src="./partials/spinner.html"></include>
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/modal-film.html"></include>
@@ -27,4 +25,3 @@
     <include src="./partials/footer.html"></include>
   </body>
 </html>
-
