--- a/src/my-library.html
+++ b/src/my-library.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="shortcut icon" href="./images/film.png" />
     <script type="module" src="./my-library.js"></script>
   </head>
 
