--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,9 @@
     <include src="./partials/spinner.html"></include>
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
+    <include src="./partials/footer.html"></include>
     <include src="./partials/modal-film.html"></include>
     <include src="./partials/modal-team.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/scroll-to-top.html"></include>
   </body>
 </html>
