--- a/src/my-library.html
+++ b/src/my-library.html
@@ -21,5 +21,6 @@
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/scroll-to-top.html"></include>
   </body>
 </html>
