--- a/src/my-library.html
+++ b/src/my-library.html
@@ -20,6 +20,7 @@
     <include src="./partials/library.html"></include>
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
+    <include src="./partials/modal-film.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/scroll-to-top.html"></include>
   </body>
