--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-film.html"></include>
+    <include src="./partials/modal-trailer.html"></include>
     <include src="./partials/modal-team.html"></include>
     <include src="./partials/scroll-to-top.html"></include>
   </body>
