--- a/src/my-library.html
+++ b/src/my-library.html
@@ -18,6 +18,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/library.html"></include>
+    <include src="./partials/spinner.html"></include>
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/modal-film.html"></include>
