--- a/src/my-library.html
+++ b/src/my-library.html
@@ -22,6 +22,7 @@
     <!-- Trend movies list -->
     <include src="./partials/main.html"></include>
     <include src="./partials/modal-film.html"></include>
+    <include src="./partials/modal-team.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/scroll-to-top.html"></include>
   </body>
